feat: adding players to the table by the form

--- a/player_ts/index.html
+++ b/player_ts/index.html
@@ -18,7 +18,7 @@
                 <th>Idade</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="tabela-jogador">
             <tr class="jogador">
                 <td class="info-nome">Lázaro</td>
                 <td class="info-altura">1.70</td>
@@ -29,15 +29,16 @@
         </tbody>
     </table>
 
-    <form action="">
-        <input type="text" name="nome" id="form-name" placeholder="Insira o nome">
-        <input type="text" name="altura" id="form-altura" placeholder="Insira a altura">
-        <input type="text" name="peso" id="form-peso" placeholder="Insira o peso">
-        <input type="text" name="idade" id="form-idade" placeholder="Insira a idade">
+    <form id="form-adiciona">
+        <input type="text" name="nome" id="form-nome" placeholder="Insira o nome">
+        <input type="number" name="altura" id="form-altura" placeholder="Insira a altura">
+        <input type="number" name="peso" id="form-peso" placeholder="Insira o peso">
+        <input type="number" name="idade" id="form-idade" placeholder="Insira a idade">
         
+        <button id="button-add">adiciona</button>
     </form>
 
-   <button id="button-add">adiciona</button>
+   
 
     
     <script src="prod/app.js"></script> 
